# palm_image_extractor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dataset/: DATASET_README.md
docs/: API_DOCUMENTATION.md  CENTRAL_PALM_UPDATE.md  CLI_USAGE.md  IMPLEMENTATION_SUMMARY_TASK8.md  PERFORMANCE_OPTIMIZATIONS.md  TASK10_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_GUIDE.md
examples/: demo_performance.py  example.py  example_output_usage.py  example_visualization.py
src/: __init__.py  data_models.py  hand_detector.py  image_loader.py  mask_generator.py  palm_extractor.py  palm_segmentation_pipeline.py
tests/: __init__.py  test_hand_detector.py  test_image_loader.py  test_mask_generator.py  test_palm_extractor.py  test_performance.py  test_pipeline_integration.py  test_visualization.py
