[project]
name = "palm-image-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.5.0",
    "mediapipe>=0.10.32",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "ultralytics>=8.4.21",
]
